# src/api/page/page.swagger.ts
@@ -1,147 +1,0 @@
-const EX = {
-  readAll: [
-    {
-      _id: "61e6d2afbc63fbd022d3a8ab",
-      name: "Home",
-      translationFiles: [
-        "61e6d2afbc63fbd022d3a8af",
-        "61faac320fa2d3394df5fd0b",
-        "61faac8d0fa2d3394df5fd0e",
-      ],
-    },
-    {
-      _id: "61eabacbff17a349b40932cd",
-      name: "Disconnect",
-      translationFiles: [
-        "6202b3fd4dc377b8a73b339a",
-        "6202b4424dc377b8a73b339b",
-        "6202b4704dc377b8a73b339c",
-      ],
-    },
-    {
-      _id: "6202c6504dc377b8a73b33cc",
-      name: "Cooking",
-      translationFiles: [
-        "6202c9904dc377b8a73b3400",
-        "6202c9b94dc377b8a73b3401",
-        "6202ca4d4dc377b8a73b3402",
-      ],
-    },
-    {
-      _id: "6202c6734dc377b8a73b33cd",
-      name: "Recipies",
-      translationFiles: [
-        "6202cb554dc377b8a73b3416",
-        "6202cb9a4dc377b8a73b3417",
-        "6202cbee4dc377b8a73b3418",
-      ],
-    },
-    {
-      _id: "6202cdb14dc377b8a73b3438",
-      name: "CreatePlaylist",
-      translationFiles: [
-        "6202ce794dc377b8a73b3440",
-        "6202cea34dc377b8a73b3441",
-        "6202cef64dc377b8a73b3442",
-      ],
-    },
-    {
-      _id: "6202cdca4dc377b8a73b343d",
-      name: "SharePlaylist",
-      translationFiles: [
-        "6202d05b4dc377b8a73b3456",
-        "6202d0814dc377b8a73b3457",
-        "6202d0ca4dc377b8a73b3458",
-      ],
-    },
-    {
-      _id: "6202d1fe4dc377b8a73b346a",
-      name: "SearchPodcast",
-      translationFiles: [
-        "61e6d2afbc63fbd022d3a8af",
-        "6202c9b94dc377b8a73b3401",
-        "6202cbee4dc377b8a73b3418",
-      ],
-    },
-    {
-      _id: "6202d2114dc377b8a73b346b",
-      name: "publishSearchPodcast",
-      translationFiles: [
-        "6202b3fd4dc377b8a73b339a",
-        "6202b4424dc377b8a73b339b",
-        "6202ca4d4dc377b8a73b3402",
-      ],
-    },
-  ],
-
-  create: {
-    name: "Contact Page",
-    translationFiles: ["61e6d2afbc63fbd022d3a8ac"],
-  },
-
-  read: {
-    _id: "6202cdca4dc377b8a73b343d",
-    name: "SharePlaylist",
-    translationFiles: [
-      {
-        _id: "6202d05b4dc377b8a73b3456",
-        lang: "GB",
-        data: [
-          {
-            _id: "62038da462e4532bfd894fa1",
-            id: "SharePlaylist",
-            value: "Do you want your playlist to be public or private ?",
-            description: "select privacy playlist ",
-          },
-        ],
-      },
-      {
-        _id: "6202d0814dc377b8a73b3457",
-        lang: "FR",
-        data: [
-          {
-            _id: "62038da462e4532bfd894fa2",
-            id: "SharePlaylist",
-            value: "Voulez vous que votre playlist soit publique ou privée ?",
-            description: "Choix publique ou privé utilisateur",
-          },
-        ],
-      },
-      {
-        _id: "6202d0ca4dc377b8a73b3458",
-        lang: "ES",
-        data: [
-          {
-            _id: "62038da462e4532bfd894fa3",
-            id: "SharePlaylist",
-            value:
-              "Quieres que tu lista de reproducción sea pública o privada?",
-            description: "lista de reproducción pública o privada",
-          },
-        ],
-      },
-    ],
-  },
-
-  update: {
-    _id: "6202d2114dc377b8a73b346b",
-    name: "PublishPodcast",
-    translationFiles: [
-      "6202b3fd4dc377b8a73b339a",
-      "6202b4424dc377b8a73b339b",
-      "6202ca4d4dc377b8a73b3402",
-    ],
-  },
-
-  delete: {
-    _id: "61e6d2afbc63fbd022d3a8ab",
-    name: "Home",
-    translationFiles: [
-      "61e6d2afbc63fbd022d3a8af",
-      "61faac320fa2d3394df5fd0b",
-      "61faac8d0fa2d3394df5fd0e",
-    ],
-  },
-};
-
-export { EX };
